Update to upstream release 1.13.0

--- a/netdata.conf
+++ b/netdata.conf
@@ -17,6 +17,7 @@
 [web]
 	web files owner = root
 	web files group = root
+	bind to = localhost
 
 [health]
 	stock health configuration directory = /etc/netdata/conf.d/health.d
