Fix wrong drop for el6 support. Fix tmpfiles (from /var/run to /run). Minors changes in netdata.conf

--- a/netdata.conf
+++ b/netdata.conf
@@ -12,12 +12,23 @@
 
 # global netdata configuration
 [global]
-	stock config directory = /etc/netdata/conf.d
-	
+    run as user = netdata
+
+    # the default database size - 1 hour
+    history = 3600
+
+    # some defaults to run netdata with least priority
+    process scheduling policy = idle
+    OOM score = 1000
+    
+    stock config directory = /etc/netdata/conf.d
+  
 [web]
-	web files owner = root
-	web files group = root
-	bind to = localhost
+    web files owner = root
+    web files group = netdata
+    
+    # by default do not expose the netdata port
+    bind to = localhost
 
 [health]
-	stock health configuration directory = /etc/netdata/conf.d/health.d
+    stock health configuration directory = /etc/netdata/conf.d/health.d
